force-app/main/default/objects/DocumentSP__c/DocumentSP__c.object-meta.xml
<CustomObject>
    <label>DocumentSP</label>
    <nameField>
        <displayFormat>D-{000}</displayFormat>
        <label>DocumentSPID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DocumentSP</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>