force-app/main/default/objects/DocumentSP__c/fields/DocumentCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>DocumentCreatedDate__c</fullName>
    <label>DocumentCreatedDate</label>
    <type>DateTime</type>
</CustomField>