force-app/main/default/objects/DocumentSP__c/fields/DocumentName__c.field-meta.xml
<CustomField>
    <fullName>DocumentName__c</fullName>
    <label>DocumentName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>