force-app/main/default/objects/DocumentSP__c/fields/DocumentSize__c.field-meta.xml
<CustomField>
    <fullName>DocumentSize__c</fullName>
    <label>DocumentSize</label>
    <length>50</length>
    <type>Text</type>
</CustomField>