force-app/main/default/objects/DocumentSP__c/fields/DocumentType__c.field-meta.xml
<CustomField>
    <fullName>DocumentType__c</fullName>
    <label>DocumentType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>