force-app/main/default/objects/DocumentSP__c/fields/DocumentVersion__c.field-meta.xml
<CustomField>
    <fullName>DocumentVersion__c</fullName>
    <label>DocumentVersion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>