force-app/main/default/objects/DocumentSP__c/fields/RelatedID__c.field-meta.xml
<CustomField>
    <fullName>RelatedID__c</fullName>
    <label>RelatedID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>